--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
    font-family: 'Changa', sans-serif;
-    background-image: linear-gradient(rgba(3,10,18,0.35), rgba(3,10,18,0.35)), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUo-ECF5eXmvAhYgIdFfBuGLmIKJ0oO7fsGw&s');
+    background-image: linear-gradient(rgba(3,10,18,0.35), rgba(3,10,18,0.35)), url('https://p4.wallpaperbetter.com/wallpaper/399/934/392/earth-in-black-space-photo-of-the-earth-wallpaper-preview.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
