--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,7 @@ k;margin-bottom:14px}
 
 
 <footer>
-  <p>حقوق التطبيق محفوظة © أبو الحسن</p>
+  <p>حقوق الموقع محفوظة © أبو الحسن</p>
   <p>كروب نصائح لجوء وسفر حول العالم</p>
 </footer>
 <script>
