--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
    font-family: 'Changa', sans-serif;
-    background-image: linear-gradient(rgba(3,10,18,0.35), rgba(3,10,18,0.35)), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaUQxpGTbCJU5ANqudLaaQ25mmoqBIgo11L-grMKkc6TJ83KXSbjEVB1osYO6BmY7Tbd4&usqp=CAU');
+    background-image: linear-gradient(rgba(3,10,18,0.35), rgba(3,10,18,0.35)), url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1600&q=80');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -1090,7 +1090,7 @@ k;margin-bottom:14px}
 
 
 <footer>
-  <p>حقوق الموقع محفوظة © أبو الحسن</p>
+  <p>حقوق التطبيق محفوظة © أبو الحسن</p>
   <p>كروب نصائح لجوء وسفر حول العالم</p>
 </footer>
 <script>
